--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-div {
+/*div {
     background-color: red;
     height: 20px;
     width: 20px;
-  }
+  }*/
   
   .block {
     background-color: blue;
